--- a/index.html
+++ b/index.html
@@ -4,72 +4,80 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>photoblog</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li>
-                    <a href="#">lifestyle</a>
-                </li>
-                <li>
-                    <a href="#">photodiary</a>
-                </li>
-                <li>
-                    <a href="#">music</a>
-                </li>
-                <li>
-                    <a href="#">travel</a>
-                </li>
-            </ul>
-        </nav>
+    <header class="header">
+        <div class="container">
+            <nav class="navigation">
+                <ul class="navigation-list">
+                    <li class="navigation-item">
+                        <a class="navigation-link" href="#">lifestyle</a>
+                    </li>
+                    <li class="navigation-item">
+                        <a class="navigation-link" href="#">photodiary</a>
+                    </li>
+                    <li class="navigation-item">
+                        <a class="navigation-link" href="#">music</a>
+                    </li>
+                    <li class="navigation-item">
+                        <a class="navigation-link" href="#">travel</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+        
     </header>
     <main>
-        <ul>
-            <li>
-                <img src="./img/photo1.png" alt="girl">
-                <p>lifestyle</p>
-                <h2>More than just a music festival</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-                aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
-            </li>
-            <li>
-                <img src="./img/photo2.png" alt="cup">
-                <p>lifestyle</p>
-                <h2>Life tastes better with coffee</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-                aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
-            </li>
-            <li>
-                <img src="./img/photo3.png" alt="two girls">
-                <p>photodiary</p>
-                <h2>American dream</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-                aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
-            </li>
-            <li>
-                <img src="./img/photo4.png" alt="man">
-                <p>photodiary</p>
-                <h2>A day exploring the Alps</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-                 aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
-            </li>
-            <li>
-                <img src="./img/photo5.png" alt="girl with a hat">
-                <p>lifestyle</p>
-                <h2>Top 10 song for running</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-                 aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
-            </li>
-            <li>
-                <img src="./img/photo6.png" alt="road">
-                <p>lifestyle</p>
-                <h2>Cold winter days</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-                 aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
-            </li>
-        </ul>
-        <button type="button">load more</button>
+        <div class="container">
+            <ul class="cards-list">
+                <li class="cards-item">
+                    <img class="cards-img" src="./img/photo1.png" alt="girl">
+                    <p class="cards-paragraph">lifestyle</p>
+                    <h2 class="cards-title">More than just a music festival</h2>
+                    <p class="cards-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
+                </li>
+                <li class="cards-item">
+                    <img class="cards-img" src="./img/photo2.png" alt="cup">
+                    <p class="cards-paragraph">lifestyle</p>
+                    <h2 class="cards-title">Life tastes better with coffee</h2>
+                    <p class="cards-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
+                </li>
+                <li class="cards-item">
+                    <img class="cards-img" src="./img/photo3.png" alt="two girls">
+                    <p class="cards-paragraph">photodiary</p>
+                    <h2 class="cards-title">American dream</h2>
+                    <p class="cards-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
+                </li>
+                <li class="cards-item">
+                    <img class="cards-img" src="./img/photo4.png" alt="man">
+                    <p class="cards-paragraph">photodiary</p>
+                    <h2 class="cards-title">A day exploring the Alps</h2>
+                    <p class="cards-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                     aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
+                </li>
+                <li class="cards-item">
+                    <img class="cards-img" src="./img/photo5.png" alt="girl with a hat">
+                    <p class="cards-paragraph">lifestyle</p>
+                    <h2 class="cards-title">Top 10 song for running</h2>
+                    <p class="cards-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                     aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
+                </li>
+                <li class="cards-item">
+                    <img class="cards-img" src="./img/photo6.png" alt="road">
+                    <p class="cards-paragraph">lifestyle</p>
+                    <h2 class="cards-title">Cold winter days</h2>
+                    <p class="cards-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                     aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
+                </li>
+            </ul>
+            <button type="button" class="btn">Load more</button>
+        </div>
     </main>
 </body>
 </html>
