--- a/index.html
+++ b/index.html
@@ -32,51 +32,47 @@
     </header>
     <main>
         <div class="container">
-            <ul class="cards-list">
-                <li class="cards-item">
-                    <img class="cards-img" src="./img/photo1.png" alt="girl">
-                    <p class="cards-paragraph">lifestyle</p>
-                    <h2 class="cards-title">More than just a music festival</h2>
-                    <p class="cards-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
-                </li>
-                <li class="cards-item">
-                    <img class="cards-img" src="./img/photo2.png" alt="cup">
-                    <p class="cards-paragraph">lifestyle</p>
-                    <h2 class="cards-title">Life tastes better with coffee</h2>
-                    <p class="cards-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
-                </li>
-                <li class="cards-item">
-                    <img class="cards-img" src="./img/photo3.png" alt="two girls">
-                    <p class="cards-paragraph">photodiary</p>
-                    <h2 class="cards-title">American dream</h2>
-                    <p class="cards-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
-                </li>
-                <li class="cards-item">
-                    <img class="cards-img" src="./img/photo4.png" alt="man">
-                    <p class="cards-paragraph">photodiary</p>
-                    <h2 class="cards-title">A day exploring the Alps</h2>
-                    <p class="cards-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-                     aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
-                </li>
-                <li class="cards-item">
-                    <img class="cards-img" src="./img/photo5.png" alt="girl with a hat">
-                    <p class="cards-paragraph">lifestyle</p>
-                    <h2 class="cards-title">Top 10 song for running</h2>
-                    <p class="cards-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-                     aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
-                </li>
-                <li class="cards-item">
-                    <img class="cards-img" src="./img/photo6.png" alt="road">
-                    <p class="cards-paragraph">lifestyle</p>
-                    <h2 class="cards-title">Cold winter days</h2>
-                    <p class="cards-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-                     aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
-                </li>
-            </ul>
-            <button type="button" class="btn">Load more</button>
+            <section class="photo">
+                <ul class="cards-list">
+                    <li class="cards-item">
+                        <img class="cards-img" src="./img/photo1.png" alt="girl">
+                        <p class="cards-paragraph">lifestyle</p>
+                        <h2 class="cards-title">More than just a music festival</h2>
+                        <p class="cards-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
+                    </li>
+                    <li class="cards-item">
+                        <img class="cards-img" src="./img/photo2.png" alt="cup">
+                        <p class="cards-paragraph">lifestyle</p>
+                        <h2 class="cards-title">Life tastes better with coffee</h2>
+                        <p class="cards-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
+                    </li>
+                    <li class="cards-item">
+                        <img class="cards-img" src="./img/photo3.png" alt="two girls">
+                        <p class="cards-paragraph">photodiary</p>
+                        <h2 class="cards-title">American dream</h2>
+                        <p class="cards-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
+                    </li>
+                    <li class="cards-item">
+                        <img class="cards-img" src="./img/photo4.png" alt="man">
+                        <p class="cards-paragraph">photodiary</p>
+                        <h2 class="cards-title">A day exploring the Alps</h2>
+                        <p class="cards-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
+                    </li>
+                    <li class="cards-item">
+                        <img class="cards-img" src="./img/photo5.png" alt="girl with a hat">
+                        <p class="cards-paragraph">lifestyle</p>
+                        <h2 class="cards-title">Top 10 song for running</h2>
+                        <p class="cards-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
+                    </li>
+                    <li class="cards-item">
+                        <img class="cards-img" src="./img/photo6.png" alt="road">
+                        <p class="cards-paragraph">lifestyle</p>
+                        <h2 class="cards-title">Cold winter days</h2>
+                        <p class="cards-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
+                    </li>
+                </ul>
+                <div class="button-wrap"><button type="button" class="btn">Load more</button></div>
+            </section>
         </div>
     </main>
 </body>
