--- a/index.html
+++ b/index.html
@@ -37,7 +37,11 @@
             <div class="container">
                 <ul class="photo__list">
                     <li class="photo__item">
-                        <img class="photo__img" src="./img/girl.png" alt="girl">
+                        <picture>
+                            <source srcset="./img/img-one.png 1x, ./img/img-one@2x.png 2x" type="image/png">
+                            <source srcset="./img/img-one.webp 1x, ./img/img-one@2x.webp 2x" type="image/webp">
+                            <img src="./img/img-one.png" alt="girl">
+                        </picture>
                         <p class="photo__filter">lifestyle</p>
                         <h2 class="photo__title">More than just a music festival</h2>
                         <p class="photo__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
