--- a/index.html
+++ b/index.html
@@ -48,35 +48,55 @@
                         aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
                     </li>
                     <li class="photo__item">
-                        <img class="photo__img" src="./img/cup.png" alt="cup">
+                        <picture>
+                            <source srcset="./img/img-two.png 1x, ./img/img-two@2x.png 2x" type="image/png">
+                            <source srcset="./img/img-two.webp 1x, ./img/img-two@2x.webp 2x" type="image/webp">
+                            <img src="./img/img-two.png" alt="girl with had">
+                        </picture>
                         <p class="photo__filter">lifestyle</p>
                         <h2 class="photo__title">Life tastes better with coffee</h2>
                         <p class="photo__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
                         aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
                     </li>
                     <li class="photo__item">
-                        <img class="photo__img" src="./img/twogirls.png" alt="two girls">
+                        <picture>
+                            <source srcset="./img/img-three.png 1x, ./img/img-three@2x.png 2x" type="image/png">
+                            <source srcset="./img/img-three.webp 1x, ./img/img-three@2x.webp 2x" type="image/webp">
+                            <img src="./img/img-three.png" alt="cup">
+                        </picture>
                         <p class="photo__filter">photodiary</p>
                         <h2 class="photo__title">American dream</h2>
                         <p class="photo__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
                         aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
                     </li>
                     <li class="photo__item">
-                        <img class="photo__img" src="./img/man.png" alt="man">
+                        <picture>
+                            <source srcset="./img/img-four.png 1x, ./img/img-four@2x.png 2x" type="image/png">
+                            <source srcset="./img/img-four.webp 1x, ./img/img-four@2x.webp 2x" type="image/webp">
+                            <img src="./img/img-four.png" alt="roud">
+                        </picture>
                         <p class="photo__filter">photodiary</p>
                         <h2 class="photo__title">A day exploring the Alps</h2>
                         <p class="photo__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
                          aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
                     </li>
                     <li class="photo__item">
-                        <img class="photo__img" src="./img/girlwithhat.png" alt="girl with a hat">
+                        <picture>
+                            <source srcset="./img/img-five.png 1x, ./img/img-five@2x.png 2x" type="image/png">
+                            <source srcset="./img/img-five.webp 1x, ./img/img-five@2x.webp 2x" type="image/webp">
+                            <img src="./img/img-five.png" alt="two girl">
+                        </picture>
                         <p class="photo__filter">lifestyle</p>
                         <h2 class="photo__title">Top 10 song for running</h2>
                         <p class="photo__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
                          aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
                     </li>
                     <li class="photo__item">
-                        <img class="photo__img" src="./img/road.png" alt="road">
+                        <picture>
+                            <source srcset="./img/img-six.png 1x, ./img/img-six@2x.png 2x" type="image/png">
+                            <source srcset="./img/img-six.webp 1x, ./img/img-six@2x.webp 2x" type="image/webp">
+                            <img src="./img/img-six.png" alt="men">
+                        </picture>>
                         <p class="photo__filter">lifestyle</p>
                         <h2 class="photo__title">Cold winter days</h2>
                         <p class="photo__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
